--- a/css/styles.css
+++ b/css/styles.css
@@ -1,10 +1,9 @@
-:root {
+:root { 
     --primary-text-color: #212121;
     --secondary-text-color:#757575;
     --accent-text-color:#2196F3;
     --primary-background-color:#FFFFFF;
     --secondary-background-color:#2F303A;
-   
 }
 
 html {
@@ -24,10 +23,33 @@ body {
     margin: 0;
 }
 
+.visually-hidden {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    border: 0;
+    padding: 0;
+    white-space: nowrap;
+    clip-path: inset(100%);
+    clip: rect(0 0 0 0);
+    overflow: hidden;
+}
+
 /* Header */
 
-.page-header {
-    border: 1px solid #ECECEC;
+h1,
+h2,
+h3,
+p {
+    margin-top: 0;
+    margin-bottom: 0;
+}
+
+.list {
+    padding: 0;
+    margin: 0;
+    list-style: none;
 }
 
 .container {
@@ -36,7 +58,39 @@ body {
     padding-left: 15px;
     padding-right: 15px;
     width: 1200px;
-    
+}
+
+.page-header {
+    border: 1px solid #ECECEC;
+   
+}
+
+.main-nav {
+    display: flex;
+    align-items: center;
+}
+
+.nav-menu {
+    display: flex;
+    align-items: center;
+}
+
+.list.site-nav {
+    display: flex;
+    margin-left: 93px;
+}
+
+.site-nav .item + .item {
+  margin-left: 50px;
+}
+
+.list.contact-nav {
+    margin-left: auto;
+    display: flex;
+}
+
+.contact-nav .item + .item {
+    margin-left: 50px;
 }
 
 .logo-site {
@@ -52,13 +106,12 @@ body {
     color:#2196F3;
 }
 
-.list {
-    list-style: none;
-    padding: 0;
-    margin: 0;
-}
+
 
 .link-nav  {
+    display: block;
+    padding-top: 32px;
+    padding-bottom: 32px;
     font-size: 14px;
     line-height: 1.14;
     letter-spacing: 0.02em;
@@ -82,6 +135,8 @@ body {
 }
 
  .link-contacts {
+    padding-top: 32px;
+    padding-bottom: 32px;
     font-weight: 500;
     font-size: 14px;
     line-height: 1.14;
@@ -93,17 +148,13 @@ body {
  /* Секция герой */
 
  .section.hero {
+     padding-top: 200px;
+     padding-bottom: 200px;
      background-color: var(--secondary-background-color);
      text-align: center;
  }
 
-  h1,
-  h2, 
-  h3, 
-  p {
-     margin-top: 0;
-     margin-bottom: 0;
- }
+  
 
  .hero-title {
     margin-top: 0;
@@ -135,7 +186,25 @@ body {
 
  /* Наши достоинства */
 
- 
+ .container.values {
+     padding-top: 94px;
+     padding-bottom: 94px;
+ }
+
+
+ .list.values {
+     display: flex;
+     flex-wrap: wrap;
+ }
+
+.item-values {
+    width: 270px;
+    margin-right: 30px;
+}
+
+.item-values:nth-child(4n) {
+    margin-right: 0;
+}
 
  .title-values {
     margin-bottom: 10px;
@@ -157,6 +226,10 @@ body {
 
  /* Чем мы занимаемся */
 
+ .container.doing {
+     padding-bottom: 94px;
+ }
+
  .heading-section {
     margin-top: 0;
     margin-bottom: 50px;
@@ -166,22 +239,53 @@ body {
     line-height: 1.17;
     letter-spacing: 0.03em;
     color: var(--primary-text-color);
-
  }
+
+ .list.doing {
+    display: flex;
+    flex-wrap: wrap;
+ }
+
+.item-doing {
+    margin-right: 30px;
+}
+
+.item-doing:nth-child(3n) {
+    margin-right: 0;
+}
+
+
 
  /* Наша команда */
 .section.team {
+    text-align: center;
+    background-color: #F5F4FA;
     padding-top: 94px;
     padding-bottom: 94px;
-    background-color: #F5F4FA;
+
 }
 
- .title {
+ .title-team {
+    margin-top: 30px;
+    margin-bottom: 10px;
     font-weight: 500;
     font-size: 16px;
     line-height: 1.19;
     letter-spacing: 0.03em;
     color: var(--primary-text-color);
+ }
+
+ .list.team {
+    display: flex;
+    flex-wrap: wrap;
+ }
+
+ .item-team {
+     margin-right: 30px;
+ }
+
+ .item-team:nth-child(4n) {
+     margin-right: 0;
  }
 
  .title-info {
@@ -195,9 +299,13 @@ body {
  .footer {
      
      background-color: var(--secondary-background-color);
+     height: 252px;
  }
 
 .logo-footer {
+    display: inline-block;
+    margin-bottom: 20px;
+    margin-top: 60px;
     font-family: 'Raleway', sans-serif;
     font-size: 26px;
     line-height: 1.2;
@@ -211,12 +319,8 @@ body {
     font-style: normal;
 }
 
-.logo-footer {
-    display: inline-block;
-    margin-bottom: 20px;
-}
-
 .text-adress {
+    margin-bottom: 9px;
     font-size: 14px;
     line-height: 1.7;
     letter-spacing: 0.03em;
@@ -224,6 +328,7 @@ body {
 }
 
 .link-adress {
+    display: inline-block;
     font-size: 14px;
     line-height: 1.7;
     letter-spacing: 0.03em;
@@ -231,8 +336,17 @@ body {
     text-decoration: none;
 }
 
+.link-adress.mail {
+margin-bottom: 9px;
+}
 
 /* Страница Портфолио */
+
+.section.portfolio {
+    padding-top: 94px;
+    padding-bottom: 94px;
+}
+
 .btn-port {
 min-width: 73px;
 height: 38px;
