--- a/css/styles.css
+++ b/css/styles.css
@@ -17,10 +17,12 @@ html {
 }
 
 body {
+    margin: 0;
+
     font-family: 'Roboto', 'Raleway', sans-serif;
     color: var(--primary-text-color);
     background-color: var(--primary-background-color);  
-    margin: 0;
+    
 }
 
 .visually-hidden {
@@ -49,6 +51,7 @@ p {
 .list {
     padding: 0;
     margin: 0;
+
     list-style: none;
 }
 
@@ -112,11 +115,12 @@ p {
     display: block;
     padding-top: 32px;
     padding-bottom: 32px;
+
     font-size: 14px;
-    line-height: 1.14;
-    letter-spacing: 0.02em;
     font-weight: 500;
     text-decoration: none;
+    line-height: 1.14;
+    letter-spacing: 0.02em;
     color:var(--primary-text-color);
 }
 
@@ -137,6 +141,7 @@ p {
  .link-contacts {
     padding-top: 32px;
     padding-bottom: 32px;
+
     font-weight: 500;
     font-size: 14px;
     line-height: 1.14;
@@ -150,15 +155,17 @@ p {
  .section.hero {
      padding-top: 200px;
      padding-bottom: 200px;
-     background-color: var(--secondary-background-color);
      text-align: center;
- }
 
-  
+     background-color: var(--secondary-background-color);  
+    }
+ 
+
 
  .hero-title {
     margin-top: 0;
     margin-bottom: 30px;
+
     font-weight: 900;
     font-size: 44px;
     line-height: 1.36;
@@ -171,8 +178,9 @@ p {
     min-width: 200px;
     height: 50px;
     padding: 10px 32px;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     border-radius: 4px;
+
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     font-family: inherit;
     font-weight: 700;
     font-size: 16px;
@@ -208,6 +216,7 @@ p {
 
  .title-values {
     margin-bottom: 10px;
+
     font-weight: 700;
     font-size: 14px;
     line-height: 1.14;
@@ -234,6 +243,7 @@ p {
     margin-top: 0;
     margin-bottom: 50px;
     text-align: center;
+
     font-weight: 700;
     font-size: 36px;
     line-height: 1.17;
@@ -259,15 +269,18 @@ p {
  /* Наша команда */
 .section.team {
     text-align: center;
-    background-color: #F5F4FA;
     padding-top: 94px;
     padding-bottom: 94px;
+
+    background-color: #F5F4FA;
+   
 
 }
 
  .title-team {
     margin-top: 30px;
     margin-bottom: 10px;
+
     font-weight: 500;
     font-size: 16px;
     line-height: 1.19;
@@ -306,6 +319,7 @@ p {
     display: inline-block;
     margin-bottom: 20px;
     margin-top: 60px;
+
     font-family: 'Raleway', sans-serif;
     font-size: 26px;
     line-height: 1.2;
@@ -321,6 +335,7 @@ p {
 
 .text-adress {
     margin-bottom: 9px;
+
     font-size: 14px;
     line-height: 1.7;
     letter-spacing: 0.03em;
@@ -329,6 +344,7 @@ p {
 
 .link-adress {
     display: inline-block;
+
     font-size: 14px;
     line-height: 1.7;
     letter-spacing: 0.03em;
@@ -347,11 +363,23 @@ margin-bottom: 9px;
     padding-bottom: 94px;
 }
 
-.btn-port {
-min-width: 73px;
-height: 38px;
-border-radius: 4px;
+.filter-portfolio {
+    margin-bottom: 50px;
+}
+
+.list.filter {
+    
+    display: flex;  
+    justify-content: center;
+
+}
+
+.btn-filter {    
 padding: 6px 22px;
+min-width: 73px;
+border-radius: 4px;
+
+height: 38px;
 border-color: transparent;
 background: #F5F4FA;   
 font-family: inherit;
@@ -362,17 +390,50 @@ letter-spacing: 0.03em;
 cursor: pointer;
 }
 
-.btn-port:hover,
-.btn-port:focus {
+
+.list.filter .btn-filter {
+    margin-left:8px;
+}
+
+
+
+.btn-filter:hover,
+.btn-filter:focus {
     background-color: #2196F3;
     color: #FFFFFF;   
 } 
+
+
+.work-examples {
+text-align: center;
+}
+
+.list.works {
+display: flex;
+flex-wrap: wrap;
+}
+
+.item.work {
+margin-right: 30px;
+margin-bottom: 30px;
+}
+
+.item.work:nth-child(3n) {
+    margin-right: 0;
+}
+
+.item.work:nth-last-child(-n + 3 ) {
+    margin-bottom: 0;
+}
 
 .link-works {
     text-decoration: none;
 }
 
 .heding-works {
+    margin-top: 20px;
+    margin-bottom: 4px;
+    
     font-weight: 700;
     font-size: 18px;
     line-height: 2;
@@ -386,4 +447,7 @@ cursor: pointer;
     letter-spacing: 0.03em;
     color:#757575;
 }
+
+
+
 
